--- a/index.html
+++ b/index.html
@@ -27,10 +27,19 @@
         background: #64748b; 
       }
     </style>
-    <!-- Polyfill for Buffer needed by ExcelJS -->
-    <script src="https://cdn.jsdelivr.net/npm/buffer@6.0.3/index.min.js"></script>
     <script>
-      window.Buffer = window.buffer.Buffer;
+      // Early polyfill for 'process' needed by some modules
+      window.global = window;
+      window.process = window.process || {
+        env: { NODE_DEBUG: undefined },
+        version: '',
+        nextTick: function(fn) {
+          const args = Array.prototype.slice.call(arguments, 1);
+          Promise.resolve().then(function() {
+            fn.apply(null, args);
+          });
+        }
+      };
     </script>
     <script type="importmap">
 {
@@ -40,7 +49,9 @@
     "react/": "https://esm.sh/react@^19.2.4/",
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "exceljs": "https://esm.sh/exceljs@4.4.0"
+    "exceljs": "https://esm.sh/exceljs@4.4.0?bundle&deps=buffer@6.0.3",
+    "jszip": "https://esm.sh/jszip@3.10.1",
+    "buffer": "https://esm.sh/buffer@6.0.3"
   }
 }
 </script>
