--- a/index.html
+++ b/index.html
@@ -1,45 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DocuTranslate AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #0f172a;
-        color: #e2e8f0;
-      }
-      /* Custom scrollbar for file list */
-      .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-track {
-        background: #1e293b; 
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #475569; 
-        border-radius: 3px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #64748b; 
-      }
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #0f172a;
+            color: #e2e8f0;
+            margin: 0;
+        }
+
+        /* Loading Screen */
+        #app-splash {
+            position: fixed;
+            inset: 0;
+            background: #0f172a;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            transition: opacity 0.4s ease-out;
+        }
+
+        .spinner {
+            width: 40px;
+            height: 40px;
+            border: 3px solid rgba(59, 130, 246, 0.2);
+            border-top-color: #3b82f6;
+            border-radius: 50%;
+            animation: spin 0.8s linear infinite;
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        .custom-scrollbar::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-track {
+            background: #1e293b;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: #475569;
+            border-radius: 3px;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+            background: #64748b;
+        }
     </style>
     <script>
-      // Early polyfill for 'process' needed by some modules
-      window.global = window;
-      window.process = window.process || {
-        env: { NODE_DEBUG: undefined },
-        version: '',
-        nextTick: function(fn) {
-          const args = Array.prototype.slice.call(arguments, 1);
-          Promise.resolve().then(function() {
-            fn.apply(null, args);
-          });
-        }
-      };
+        // Polyfills cho môi trường Browser/Production
+        window.global = window;
+        window.process = window.process || {
+            env: { NODE_DEBUG: undefined },
+            version: '',
+            nextTick: function (fn) {
+                var args = Array.prototype.slice.call(arguments, 1);
+                Promise.resolve().then(function () {
+                    fn.apply(null, args);
+                });
+            }
+        };
     </script>
     <script type="importmap">
 {
@@ -56,7 +90,10 @@
 }
 </script>
 </head>
-  <body>
+
+<body>
     <div id="root"></div>
-  </body>
+    <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
