--- a/index.html
+++ b/index.html
@@ -60,6 +60,107 @@
         .custom-scrollbar::-webkit-scrollbar-thumb:hover {
             background: #64748b;
         }
+
+        /* Driver.js Custom Styling - Modern UI */
+        .driver-popover {
+            background: white !important;
+            border-radius: 24px !important;
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25) !important;
+            border: 1px solid #f1f5f9 !important;
+            padding: 24px !important;
+            max-width: 400px !important;
+        }
+
+        .driver-popover-title {
+            font-size: 20px !important;
+            font-weight: 800 !important;
+            color: #0f172a !important;
+            margin-bottom: 12px !important;
+            font-family: 'Inter', sans-serif !important;
+        }
+
+        .driver-popover-description {
+            font-size: 15px !important;
+            color: #475569 !important;
+            line-height: 1.6 !important;
+            margin-bottom: 20px !important;
+            font-family: 'Inter', sans-serif !important;
+        }
+
+        .driver-popover-footer {
+            display: flex !important;
+            justify-content: space-between !important;
+            align-items: center !important;
+            margin-top: 20px !important;
+        }
+
+        .driver-popover-progress-text {
+            font-size: 13px !important;
+            color: #94a3b8 !important;
+            font-weight: 600 !important;
+        }
+
+        .driver-popover-navigation-btns {
+            display: flex !important;
+            gap: 8px !important;
+        }
+
+        .driver-popover-prev-btn,
+        .driver-popover-next-btn,
+        .driver-popover-close-btn {
+            padding: 10px 20px !important;
+            border-radius: 12px !important;
+            font-size: 14px !important;
+            font-weight: 700 !important;
+            text-transform: uppercase !important;
+            letter-spacing: 0.5px !important;
+            transition: all 0.2s ease !important;
+            border: none !important;
+            cursor: pointer !important;
+            font-family: 'Inter', sans-serif !important;
+        }
+
+        .driver-popover-next-btn {
+            background: #4f46e5 !important;
+            color: white !important;
+            box-shadow: 0 4px 14px 0 rgba(79, 70, 229, 0.4) !important;
+        }
+
+        .driver-popover-next-btn:hover {
+            background: #4338ca !important;
+            transform: translateY(-1px) !important;
+            box-shadow: 0 6px 20px 0 rgba(79, 70, 229, 0.5) !important;
+        }
+
+        .driver-popover-prev-btn {
+            background: #f1f5f9 !important;
+            color: #475569 !important;
+        }
+
+        .driver-popover-prev-btn:hover {
+            background: #e2e8f0 !important;
+            color: #334155 !important;
+        }
+
+        .driver-popover-close-btn {
+            background: transparent !important;
+            color: #94a3b8 !important;
+            padding: 8px !important;
+            font-size: 12px !important;
+        }
+
+        .driver-popover-close-btn:hover {
+            color: #64748b !important;
+            background: #f8fafc !important;
+        }
+
+        .driver-active-element {
+            border-radius: 16px !important;
+        }
+
+        .driver-overlay {
+            background: rgba(15, 23, 42, 0.75) !important;
+        }
     </style>
     <script>
         // Polyfills cho môi trường Browser/Production
